[package]
name = "pulchra"
authors = ["Adam Baranec"]
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.7", features = ["js"] }
three-d = "0.13.0"
rand = "0.8.5"
regex = "1.6.0"
wasm-bindgen = "0.2.82"
wasm-bindgen-test = "0.3.32"

[dependencies.web-sys]
version = "0.3.59"
features = [
  'AnalyserNode',
  'AnalyserOptions',
  'AudioBuffer',
  'AudioBufferOptions',
  'AudioBufferSourceNode',
  'AudioBufferSourceOptions',
  'AudioContext',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'Document',
  'Element',
  'EventTarget',
  'EventListener',
  'GainNode',
  'OscillatorNode',
  'OscillatorType',
  'HtmlElement',
  'HtmlCanvasElement',
  'HtmlTextAreaElement',
  'Node',
  'WebGl2RenderingContext',
  'Window',
]

[lib]
crate-type = ["cdylib"]
[build]
target = "wasm32-unknown-unknown"