[package]
name = "pulchra"
authors = ["Adam Baranec"]
version = "0.1.0"
edition = "2021"
description = "Live coding environment for 3D art"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.9", features = ["js"] }
js-sys = "0.3.61"
rand = "0.8.5"
regex = "1.8.1"
serde = "1.0.160"
serde_json = "1.0.96"
# simdnoise = "3.1.6"
three-d = "0.15.0"
wasm-bindgen = "0.2.84"
wasm-bindgen-test = "0.3.34"

[dependencies.web-sys]
version = "0.3.61"
features = [
  'AnalyserNode',
  'AnalyserOptions',
  'AudioBuffer',
  'AudioBufferOptions',
  'AudioBufferSourceNode',
  'AudioBufferSourceOptions',
  'AudioContext',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'Document',
  'Element',
  'EventTarget',
  'EventListener',
  'GainNode',
  'OscillatorNode',
  'OscillatorType',
  'HtmlElement',
  'HtmlCanvasElement',
  'HtmlParagraphElement',
  'HtmlTextAreaElement',
  'Node',
  'StereoPannerNode',
  'WebGlProgram',
  'WebGl2RenderingContext',
  'WebGlShader',
  'Window'
]

[lib]
crate-type = ["cdylib"]
[build]
target = "wasm32-unknown-unknown"